--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@tailwindcss/container-queries": "^0.1.1",
+    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query-devtools": "^5.58.0",
+    "aos": "^2.3.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
+    "ethers": "^6.13.2",
+    "firebase": "^10.13.2",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "next-themes": "^0.3.0",
@@ -30,6 +36,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "@tanstack/eslint-plugin-query": "^5.57.2",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
