--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ethers": "^6.13.2",
     "firebase": "^10.13.2",
     "lucide-react": "^0.446.0",
+    "merkletreejs": "^0.4.0",
     "next": "14.2.13",
     "next-themes": "^0.3.0",
     "react": "^18",
