--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.13",
     "@privy-io/react-auth": "^1.87.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.58.0",
@@ -27,10 +29,8 @@
     "lucide-react": "^0.446.0",
     "merkletreejs": "^0.4.0",
     "next": "14.2.13",
-    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.21.15"
