--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  "rules": {
+    "@typescript-eslint/no-unused-vars": "warn",
+    "@typescript-eslint/no-wrapper-object-types": "warn",
+    "@typescript-eslint/no-non-null-asserted-optional-chain" : "warn",
+    "@typescript-eslint/no-explicit-any" : "warn",
+    "react-hooks/rules-of-hooks" : "warn"
+  }
 }
