--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "twitter-api-v2": "^1.17.2",
     "viem": "^2.21.15"
   },
   "devDependencies": {
